<resources>
    <string name="app_name" translatable="false">Occtax</string>
    <string name="app_version" translatable="false">%1$s (%2$d)\n%3$s</string>
    <string name="activity_login_title">Sign in</string>
    <string name="activity_preferences_title">Settings</string>
    <string name="activity_map_preferences_title">Map settings</string>
    <string name="activity_input_title">Edit input</string>
    <string name="activity_dataset_title">Dataset</string>
    <string name="activity_observers_title">Observers</string>
    <string name="activity_taxa_filter_title">Taxa filters</string>
    <string name="activity_counting_add_title">Add counting</string>
    <string name="activity_counting_edit_title">Edit counting</string>
    <string name="activity_counting_media_title">Manage media</string>
    <string name="channel_name_check_observation_records_to_synchronize">New inputs</string>
    <string name="channel_description_check_observation_records_to_synchronize">Inputs to synchronize</string>
    <string name="channel_name_data_synchronization">Data synchronization</string>
    <string name="channel_description_data_synchronization">Data to synchronize</string>
    <string name="notification_observation_records_to_synchronize_title">Inputs to synchronize</string>
    <plurals name="notification_observation_records_to_synchronize_description">
        <item quantity="one">One input is ready to synchronize</item>
        <item quantity="other">%d inputs are ready to synchronize</item>
    </plurals>
    <string name="sync_data">Data synchronization</string>
    <string name="sync_last_synchronization">Last synchronization\n%s</string>
    <string name="sync_last_synchronization_date">EEE dd MMM yyyy, kk:mm:ss</string>
    <string name="sync_last_synchronization_never">never</string>
    <string name="home_drawer_open">Open drawer menu</string>
    <string name="home_drawer_close">Close drawer menu</string>
    <string name="home_last_inputs">Last inputs</string>
    <string name="home_no_settings">No app settings found.</string>
    <string name="home_no_input">No existing input.\nCreate a new one by tapping the + button.</string>
    <string name="home_first_sync">Data synchronization in progress.\nPlease wait.</string>
    <string name="home_input_date">EEE dd MMM yyyy</string>
    <string name="home_input_created_at">Input from %s</string>
    <string name="home_input_status_draft">Draft</string>
    <string name="home_input_status_to_sync">Ready to sync</string>
    <string name="home_input_status_sync_in_progress">In progress…</string>
    <string name="home_input_status_sync_error">Failed</string>
    <string name="home_input_status_sync_successful">Success</string>
    <plurals name="home_input_taxa_count">
        <item quantity="one">%d taxon</item>
        <item quantity="other">%d taxa</item>
    </plurals>
    <string name="home_input_taxa_count_empty">No taxon</string>
    <string name="home_snackbar_input_deleted">Input deleted</string>
    <string name="home_snackbar_input_undo">Undo</string>
    <string name="no_data">No data</string>
    <string name="action_settings">Settings</string>
    <string name="action_map_settings">Map settings</string>
    <string name="action_data_sync">Update local data\n<font size="10"><i>(Nomenclatures, datasets, observers, taxa)</i></font></string>
    <string name="action_data_sync_in_progress">Data synchronization in progress…</string>
    <string name="action_input_sync">Send</string>
    <string name="action_input_sync_hint">Synchronize inputs</string>
    <string name="action_sync_in_progress">Inputs synchronization in progress…</string>
    <string name="action_login">Sign in</string>
    <string name="action_logout">Sign out</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Apply filters</string>
    <string name="action_as_list">As list</string>
    <string name="action_as_map">As map</string>
    <string name="action_new_input">input</string>
    <string name="action_new_counting">counting</string>
    <string name="action_add">Add</string>
    <string name="action_add_taxon">taxon</string>
    <string name="action_add_media">Add media</string>
    <string name="action_set">Set</string>
    <string name="action_edit">Edit</string>
    <plurals name="action_title_item_count_selected">
        <item quantity="one">%d selected</item>
        <item quantity="other">%d selected</item>
    </plurals>
    <string name="action_save">Save</string>
    <string name="shortcut_input_start_short">New input</string>
    <string name="shortcut_input_start_long">Start a new input</string>
    <string name="shortcut_input_resume_last_short">Resume the last input</string>
    <string name="shortcut_input_resume_last_long">Resume the last input</string>
    <string name="alert_new_app_version_available_title">New version available</string>
    <string name="alert_new_app_version_available_description">A new version of this app is available.\nWould you like to upgrade now?</string>
    <string name="alert_new_app_version_action_ok">Yes</string>
    <string name="alert_new_app_version_action_later">Later</string>
    <string name="alert_counting_title_discard">Discard this counting?</string>
    <string name="alert_counting_title_discard_changes">Discard changes to this counting?</string>
    <string name="alert_counting_action_discard">Discard</string>
    <string name="alert_counting_action_keep">Keep editing</string>
    <string name="alert_dialog_input_delete_title">Delete this input?</string>
    <string name="alert_dialog_counting_delete_title">Delete this counting?</string>
    <string name="alert_dialog_taxon_delete_title">Delete this taxon?</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="snackbar_app_sync_not_found">"Sync" app is not installed</string>
    <string name="snackbar_settings_not_found">Unable to load settings \'%1$s\'</string>
    <string name="snackbar_settings_invalid">Invalid app settings</string>
    <string name="snackbar_settings_map_invalid">Invalid map configuration from settings \'%1$s\'</string>
    <string name="snackbar_permissions_not_granted">Permissions were not granted</string>
    <string name="snackbar_permissions_granted">Permissions were been granted</string>
    <string name="snackbar_permission_external_storage_rationale">External storage permission is needed</string>
    <string name="snackbar_permission_external_storage_available">External storage Permissions have been granted</string>
    <string name="snackbar_upgrading_app">Upgrading…</string>
    <string name="toast_not_connected">Not connected</string>
    <string name="toast_logout_success">Successfully disconnected</string>
    <string name="toast_input_default_properties_loading_failed">Failed to load default property values</string>
    <string name="toast_purge_local_data">Clear local data…</string>
    <string name="dataset_created_at">Created at %s</string>
    <string name="dataset_date">EEE dd MMM yyyy</string>
    <string name="pager_fragment_observers_and_date_input_title">Observers &#38; date</string>
    <string name="pager_fragment_map_title">Pointing</string>
    <string name="pager_fragment_taxa_added_title">Taxa added</string>
    <string name="pager_fragment_taxa_title">Select taxon</string>
    <string name="pager_fragment_information_title">Information</string>
    <string name="pager_fragment_counting_title">Counting</string>
    <string name="pager_fragment_summary_title">Summary</string>
    <plurals name="observers_and_date_selected_observers">
        <item quantity="one">%d selected observer</item>
        <item quantity="other">%d selected observers</item>
    </plurals>
    <string name="observers_and_date_selected_observers_no_data">No selected observer.\nAdd one by tapping the "Add" button.</string>
    <string name="observers_and_date_dataset">Dataset</string>
    <string name="input_date">Date</string>
    <string name="input_date_hint">Input date</string>
    <string name="input_date_start_hint">Start date</string>
    <string name="input_date_end_hint">End date</string>
    <string name="input_error_date_start_not_set">Missing start date</string>
    <string name="input_error_date_start_after_now">Start date should be set before now</string>
    <string name="input_error_date_end_not_set">Missing end date</string>
    <string name="input_error_date_end_before_start_date">End date should be after start date</string>
    <string name="input_date_format">EEE dd MMM yyyy</string>
    <string name="input_datetime_format">EEE dd MMM yyyy \'at\' HH:mm</string>
    <string name="input_comment">Input comment</string>
    <string name="input_comment_add_hint">Add a comment</string>
    <string name="input_comment_edit_hint">Edit a comment</string>
    <plurals name="taxa_found">
        <item quantity="one">%d taxon found</item>
        <item quantity="other">%d taxa found</item>
    </plurals>
    <string name="taxa_filter_name_switch">Show common name</string>
    <string name="taxa_filter_name_short">Common name</string>
    <string name="taxa_filter_area_observation_title">By area observation</string>
    <string name="taxa_filter_taxonomy_title">By taxonomy</string>
    <string name="taxa_filter_area_observation_more_than_duration">Last observed for more than %1$s</string>
    <string name="taxa_filter_area_observation_less_than_duration">Last observed for less than %1$s</string>
    <string name="taxa_filter_area_observation_none">Never observed</string>
    <string name="taxa_filter_area_observation_short_more_than_duration">more than %1$s</string>
    <string name="taxa_filter_area_observation_short_less_than_duration">less than %1$s</string>
    <string name="taxa_filter_area_observation_short_none">Never</string>
    <plurals name="duration_year">
        <item quantity="one">one year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <plurals name="duration_month">
        <item quantity="one">one month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="duration_days">
        <item quantity="one">one day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="form_field_error_mandatory">Mandatory field</string>
    <string name="information_no_data">⚠ No nomenclature found.\nPlease start a data synchronization.</string>
    <string name="counting_no_data">No counting.\nCreate a new one by tapping the + button.</string>
    <string name="counting_not_found">No counting found.</string>
    <string name="counting_main_label">Counting #%d</string>
    <string name="counting_description_separator"><![CDATA[<b>%1$s:</b>]]> <![CDATA[<i>%2$s</i>]]></string>
    <string name="counting_toast_empty">Empty counting: Nothing to save</string>
    <string name="counting_bottom_sheet_photo_title">Add photo</string>
    <string name="counting_bottom_sheet_photo_camera">From camera</string>
    <string name="counting_bottom_sheet_photo_gallery">From gallery</string>
    <plurals name="counting_media">
        <item quantity="one">%d media</item>
        <item quantity="other">%d media</item>
    </plurals>
    <string name="counting_media_no_data">No media.\nAdd one by tapping the + button.</string>
    <string name="counting_media_deleted">Media deleted</string>
    <string name="counting_media_action_add_hint">Add media</string>
    <string name="counting_media_action_add_from_photo_hint">From camera</string>
    <string name="counting_media_action_add_from_gallery_hint">From gallery</string>
    <string name="counting_media_action_undo">Undo</string>
    <string name="counting_media_title">\'%1$s\' observed on %2$s</string>
    <string name="counting_media_description">\'%1$s\' observed on %2$s</string>
</resources>