<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_action_filter"
        android:orderInCategory="2"
        android:title="@string/action_filter"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/menu_status"
                android:checkableBehavior="all">
                <item
                    android:id="@+id/menu_status_draft"
                    android:title="@string/home_input_status_draft" />
                <item
                    android:id="@+id/menu_status_to_sync"
                    android:title="@string/home_input_status_to_sync" />
            </group>
        </menu>
    </item>

</menu>