<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_default"
            app:cardCornerRadius="@dimen/cardview_radius"
            app:cardElevation="@dimen/cardview_elevation"
            app:contentPadding="@dimen/padding_default">

            <fr.geonature.occtax.ui.shared.view.ListItemActionView
                android:id="@+id/selected_observers_action_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:action="@string/action_edit"
                app:action_empty="@string/action_add"
                app:no_data="@string/observers_and_date_selected_observers_no_data"
                app:title="@string/observers_and_date_selected_observers"
                app:visible_items="2" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_default"
            android:layout_marginEnd="@dimen/padding_default"
            android:layout_marginBottom="@dimen/padding_default"
            app:cardCornerRadius="@dimen/cardview_radius"
            app:cardElevation="@dimen/cardview_elevation"
            app:contentPadding="@dimen/padding_default">

            <fr.geonature.occtax.ui.shared.view.ListItemActionView
                android:id="@+id/selected_dataset_action_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:action="@string/action_edit"
                app:action_empty="@string/action_set"
                app:title="@string/observers_and_date_dataset" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_default"
            android:layout_marginEnd="@dimen/padding_default"
            android:layout_marginBottom="@dimen/padding_default"
            app:cardCornerRadius="@dimen/cardview_radius"
            app:cardElevation="@dimen/cardview_elevation"
            app:contentPadding="@dimen/padding_default">

            <fr.geonature.occtax.ui.shared.view.InputDateView
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/input_date" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_default"
            android:layout_marginEnd="@dimen/padding_default"
            android:layout_marginBottom="@dimen/padding_default"
            app:cardCornerRadius="@dimen/cardview_radius"
            app:cardElevation="@dimen/cardview_elevation"
            app:contentPadding="@dimen/padding_default">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding_default"
                    android:text="@string/input_comment"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@android:id/edit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_comment_add_hint"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine|textAutoCorrect"
                        android:selectAllOnFocus="true" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>