<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_default">

    <TextView
        android:id="@android:id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_date"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateStart"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_date_start_hint"
        android:paddingTop="@dimen/padding_default"
        app:layout_constraintEnd_toEndOf="@android:id/title"
        app:layout_constraintStart_toStartOf="@android:id/title"
        app:layout_constraintTop_toBottomOf="@android:id/title"
        app:startIconDrawable="@drawable/ic_edit_calendar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:ellipsize="end"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top"
            android:imeOptions="actionNone"
            android:importantForAutofill="no"
            android:inputType="none"
            android:scrollHorizontally="false"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textIsSelectable="false"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateEnd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_date_end_hint"
        android:paddingTop="@dimen/padding_default"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@android:id/title"
        app:layout_constraintStart_toStartOf="@android:id/title"
        app:layout_constraintTop_toBottomOf="@+id/dateStart"
        app:startIconDrawable="@drawable/ic_edit_calendar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:ellipsize="end"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top"
            android:imeOptions="actionNone"
            android:importantForAutofill="no"
            android:inputType="none"
            android:scrollHorizontally="false"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textIsSelectable="false"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>